账单接口联调等

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/out/out",
     "pages/search/search",
     "pages/my/my",
-    "pages/goodsInfo/goodsInfo"
+    "pages/goodsInfo/goodsInfo",
+    "pages/myOrder/myOrder"
   ],
   "permission": {
     "scope.userLocation": {
