--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.12.3",
-  "appid": "wx5bd0b1574b0bcd48",
+  "appid": "wx4187a5dbb66f9f35",
   "projectname": "music",
   "debugOptions": {
     "hidedInDevtools": []
