音频进度条问题&会员到期时间&首页增加商城教学视频tab

--- a/app.json
+++ b/app.json
@@ -50,7 +50,11 @@
     "live-player-plugin": {
       "version": "1.3.0",
       "provider": "wx2b03c6e691cd7370"
-  }
+    },
+    "mini-shop-plugin": {
+      "version": "latest",
+      "provider": "wx34345ae5855f892d"
+    }
   },
   "useExtendedLib": {
     "weui": true
