--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "pages/goodsInfo/goodsInfo",
     "pages/out/out",
     "pages/search/search",
+    "pages/shop/shop",
     "pages/vidioInfo/vidioInfo"
   ],
   "permission": {
